		30W ZON, Digital, MEO
		19E Tid 1057 (RTL HD etc) 
		19E HD+
	Changed time out for switching server before instant recording from 1 sec to 5 sec.
	Added channelgroup 8 DVB-T Twente (The Netherlands)
	Fixed Menu 'Server : Media Directory'
	Fixed EPG & Server EPG info menu no more 'Undefined' but channelname/ number
	When playing recordings you can switch subs on/off with 'yellow'


0.17	Show EPG from Server limited to X days ( 3 = default, set in settings.js)
	Updated Mainmenu. For now Recordings = Server Recordings menu item.
	Updated EPG-Schedule view, for every item a switch timer can be set. With up/down scrolling through Schedule is possible
	Guide view still uses the old Schedule View.
	View Timer menu now also shows day & date.
	Set timer for local recording.
	Fixed crash when no EPG and users presses up/down
	Small fixes OSD display, Schedule, SwitchTimer
	Small fix to make it work on 19x3. (Looks like 19x0 auto selects right font)
	Pressing record start Instant server recording. (Switching is done by ID so no need for same channelnumbering on server)
	Recording info shows channelnumber.
	EPG filter on 23E expanded.
	EPG filter on Cable set to Dutch / Ziggo.
	Added info window for instant records.
	Source in OSD (Can be switched off in settings.js)


0.16	EPG/schedule info remove on channel switch
	Exit Guide View removes epg/schedule info
	Recording Info remove when doing up/down or OK/play
	getResume request now with timestamp to force reload every time.
	Switched to Delete from "VDR on SmartTV"
	Menu change so server options are grouped
	Show EPG from Server

0.15	ChannelGroup settings moved from settings to channelsX.js
	Removed display timeout from EPG info in channels view
	Restart portal only from MENU, in normal view Blue gives epginfo
	channelsX.js template on files section on project page
	Protection ON jumps to ChannelGroup 0 & last played channel if protection is set for current channelgroup.
	Fix left & right skips protected channel group